Added the quit command Added message when harvesting